--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --dir src",
+    "test": "jest"
   },
   "dependencies": {
     "next": "12.0.4",
@@ -13,10 +14,22 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.3",
     "@types/node": "16.11.9",
     "@types/react": "17.0.36",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
-    "typescript": "4.5.2"
+    "eslint-plugin-jest": "^25.2.4",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-testing-library": "^5.0.0",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.5.2"
   }
 }
