--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --dir src",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "next": "12.0.4",
@@ -28,8 +30,15 @@
     "eslint-plugin-jest": "^25.2.4",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-testing-library": "^5.0.0",
+    "husky": "^7.0.4",
     "jest": "^27.3.1",
+    "lint-staged": "^12.1.1",
+    "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
     "typescript": "^4.5.2"
+  },
+  "lint-staged": {
+    "*.(ts|tsx)": "eslint --cache --fix",
+    "*": "prettier --write --ignore-unknown"
   }
 }
